--- a/.github/workflows/trigger_web_build.yml
+++ b/.github/workflows/trigger_web_build.yml
@@ -3,6 +3,7 @@ name: Trigger Gastronomy Web Build
 on:
   push:
     branches: [main]
+  workflow_dispatch:
 
 jobs:
   trigger:
@@ -19,7 +20,7 @@ jobs:
             curl -L \
               -X POST \
               -H "Accept: application/vnd.github+json" \
-              -H "Authorization: Bearer ${{ secrets.PAT }}" \
+              -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               https://api.github.com/repos/$repo_owner/$repo_name/actions/workflows/$workflow_name/dispatches \
               -d '{"ref":"main","inputs":{}}'
