--- a/.github/workflows/trigger_web_build.yml
+++ b/.github/workflows/trigger_web_build.yml
@@ -9,6 +9,9 @@ jobs:
   trigger:
     runs-on: ubuntu-latest
 
+    permissions:
+      actions: write
+
     steps:
       - name: Trigger Workflow in Another Repository
         run: |
