--- a/.github/workflows/trigger_web_build.yml
+++ b/.github/workflows/trigger_web_build.yml
@@ -9,21 +9,19 @@ jobs:
   trigger:
     runs-on: ubuntu-latest
 
-    permissions:
-      actions: write
-
     steps:
       - name: Trigger Workflow in Another Repository
         run: |
           # Set the required variables
           repo_owner="lulzhipsters" 
           repo_name="gastronomy-web"
+          branch_name="main"
           workflow_name="deploy.yml"
 
             curl -L \
               -X POST \
               -H "Accept: application/vnd.github+json" \
-              -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+              -H "Authorization: Bearer ${{ secrets.DEPLOY_WEB_TOKEN }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               https://api.github.com/repos/$repo_owner/$repo_name/actions/workflows/$workflow_name/dispatches \
-              -d '{"ref":"main","inputs":{}}'
+              -d '{"ref":"$branch_name","inputs":{}}'
