--- a/.github/workflows/trigger_web_build.yml
+++ b/.github/workflows/trigger_web_build.yml
@@ -24,4 +24,4 @@ jobs:
               -H "Authorization: Bearer ${{ secrets.DEPLOY_WEB_TOKEN }}" \
               -H "X-GitHub-Api-Version: 2022-11-28" \
               https://api.github.com/repos/$repo_owner/$repo_name/actions/workflows/$workflow_name/dispatches \
-              -d '{"ref":"$branch_name","inputs":{}}'
+              -d '{\"ref\":\"$branch_name\",\"inputs\":{}}'
